--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "jazzfest-grids",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "vue": "^2.6.6"
+    "moment": "^2.24.0",
+    "vue": "^2.5.22",
+    "vue-carousel": "^0.17.0",
+    "vue-js-modal": "^1.3.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
