--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "moment": "^2.24.0",
     "vue": "^2.5.22",
     "vue-carousel": "^0.17.0",
