--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "luxon": "^1.11.4",
     "moment": "^2.24.0",
     "vue": "^2.5.22",
     "vue-carousel": "^0.17.0",
-    "vue-js-modal": "^1.3.28"
+    "vue-datetime": "^1.0.0-beta.10",
+    "vue-js-modal": "^1.3.28",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
