--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "vue-carousel": "^0.17.0",
     "vue-datetime": "^1.0.0-beta.10",
     "vue-js-modal": "^1.3.28",
+    "vuetify": "^1.5.5",
     "weekstart": "^1.0.0"
   },
   "devDependencies": {
