--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
